# solana-splits

./: Anchor.toml  client.js  readme.md
programs/contracts/: Cargo.toml
programs/contracts/src/: lib.rs
