[package]
name = "basic-0"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "splits_program"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.18.0"
percentage = "0.1.0"
solana-program = "1.4.4"

[profile.release]
panic = 'abort'